--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: Forty
 subtitle: by HTML5 UP
 email: youremailaddress@gmail.com
 description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
-baseurl: /
-url: mitchmancuso.github.io
+baseurl: ""
+url: "mitchmancuso/mitchmancuso.github.io"
 author:
 street_address: 1234 Somewhere Road
 city: Nashville
