--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # site settings
 title: Mitch Mancuso
-subtitle: Projects and Portfolio
+subtitle: Portfolio
 description: A site for coding projects and portfolio items.
 baseurl: ""
 url:
